# owner

./: .env.example  .gitignore  AGENTS.md  README.md  db_setup.py  driver_bp.py  driver_log_print.html  driver_logs_print.html  end_of_day_summary.html  forms.py  function_flow_assistant.py  lacksdrivers.py  local_server.py  manage.py  manager_bp.py  manager_routes.py  models.py  new_pretrip.html  ops_bp.py  pyproject.toml  render.yaml  requirements.txt  run_both.py  services_ops.py  twa-manifest.json  wrangler.toml  wsgi.py
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/: __init__.py  cli.py  config.py  extensions.py
billing/: __init__.py  plans.py  stripe_checkout.py  urls.py  views.py
cloudflare/: movedefense-r2-fallback-worker.js
docs/: CODEBASE_AUDIT.md  DJANGO_V2_PLAN.md
env/: pyvenv.cfg
evidence/: admin.py  apps.py  models.py
instance/: lacksdrivers.db
marketing/: DEPLOY.md  index.html  privacy.html  robots.txt  sitemap.xml
movedefense_django/: __init__.py  asgi.py  env.py  settings.py  urls.py  wsgi.py
myenv/: pyvenv.cfg
operations/: admin.py  apps.py  models.py
output/: owner_review_route_inventory_2026-06-05.md
public_site/: apps.py  urls.py  views.py
reports/: product_integrity_report.json  product_integrity_report.md  product_integrity_triage.md
routing/: admin.py  apps.py  models.py
scripts/: warm_r2_fallback.sh
static/: handoffTask.js  manifest.webmanifest  sw.js
templates/: _driver_active_wait_banner.html  _driver_log_photo_upload.html  about.html  accident_incident_form.html  accident_incident_packet.html  accident_incident_view.html  add_pretrip_entry.html  add_stop.html  all_in_one_dashboard.html  announcements.html  app.py  audit_history.html  base.html  billing_status.html  chat.html  contact.html  create_task.html  daily_log.html  daily_log_print.html  damage_evidence_packet.html  damage_report_detail.html  damage_report_form.html  damage_reports.html  dashboard.html  delay_finder.html  depart_driver_log.html  direct_messages.html  django_base.html  do_posttrip.html  driver_dashboard.html  driver_logs.html  driver_logs_print.html  driver_mobile.html  driver_recent_activity.html  driver_reports.html  driver_task_detail.html  driver_weekly_performance.html  duty_status_form.html  edit_driver_log.html  edit_pretrip.html  (+74 more)
tests/: test_accident_ifta_packets.py  test_app_flows.py  test_autolog_engine.py  test_cargo_state.py  test_cargo_timing_services.py  test_cloudflare_r2_fallback.py  test_contextual_recents.py  test_daily_log_duty_grid.py  test_decommissioned_board_ui.py  test_destination_autocomplete.py  test_django_v2_scaffold.py  test_floor_operations.py  test_flow_events.py  test_google_places.py  test_issue_severity.py  test_management_readout.py  test_manager_layout.py  test_model_constraints.py  test_move_request_parser.py  test_operations_board.py  test_packet_classification.py  test_public_pages.py  (+7 more)
(+225 files in other folders)
