[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lacksdrivers"
version = "0.1.0"
description = "Driver dispatch, pre-trip / post-trip inspection, and shift logging for MoveDefense"
readme = "README.md"
requires-python = ">=3.11,<3.13"
# Production runs Flask-SocketIO in threading mode behind a gthread Gunicorn
# worker. Eventlet remains installed only for compatibility with older local
# workflows and should not be used for the hosted database runtime.

dependencies = [
    # Web framework
    "Django>=5.2,<6",
    "Flask>=3.1,<4",
    "Flask-Bootstrap==3.3.7.1",
    "Flask-Login>=0.6.3,<1",
    "Flask-Migrate>=4.0.7,<5",
    "Flask-SocketIO>=5.5,<6",
    "Flask-SQLAlchemy>=3.1.1,<4",
    "Flask-WTF>=1.2.2,<2",
    "WTForms>=3.2,<4",
    "Werkzeug>=3.1.3,<4",
    "Jinja2>=3.1.5,<4",
    "itsdangerous>=2.2,<3",
    # ORM + migrations
    "SQLAlchemy>=2.0.36,<3",
    "alembic>=1.14,<2",
    "psycopg2-binary>=2.9,<3",
    # SocketIO transport
    "python-socketio>=5.12,<6",
    "python-engineio>=4.11,<5",
    "eventlet==0.38.2",
    "simple-websocket>=1.1,<2",
    # Production servers
    "gunicorn>=23,<24",
    "waitress>=3,<4",
    # Misc runtime
    "python-dotenv>=1,<2",
    "email_validator>=2.2,<3",
    "pytz>=2024.2",
    "requests>=2.32,<3",
    "stripe>=15,<16",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-flask>=1.3",
    "pytest-cov>=5",
    "factory-boy>=3.3",
    "types-pytz",
    "types-requests",
]

[tool.setuptools]
# This is currently a flat-layout app (lacksdrivers.py at root). The packaging
# is mostly here so dev tooling (ruff, mypy, pytest) has a config root. The
# upcoming app-factory refactor will move code into an `app/` package; at that
# point switch to:
#   packages = ["app"]
py-modules = ["lacksdrivers", "forms", "models", "manager_routes", "manager_bp", "driver_bp", "db_setup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # use of assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
# Start permissive; tighten as the refactor lands.
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
